<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iskan.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailEventFragment"
            app:destination="@id/detailEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.iskan.dicodingevent.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_favorite"-->
<!--        android:name="com.iskan.dicodingevent.ui.favorite.FavoriteFragment"-->
<!--        android:label="@string/title_favorite"-->
<!--        tools:layout="@layout/fragment_favorite" />-->

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.iskan.dicodingevent.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/detailEventFragment"
        android:name="com.iskan.dicodingevent.ui.detail.DetailEventFragment"
        android:label="@string/title_detail_event">
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
</navigation>
